--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,30 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Page title</title>
-    <link rel="stylesheet" href="./sass/index.scss" />
-    <script type="module" src="./index.js"></script>
+    <link rel="stylesheet"
+     href="./sass/index.scss" />
+    <script type="module" src="./js/index.js"></script>
+        <link rel="stylesheet" 
+        href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+          integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+          crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
-    <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
+    <form class="search-form" id="search-form">
+      <div class="search-box">
+        <input type="text" 
+        name="searchQuery" 
+        autocomplete="off" 
+        placeholder="Search images..." 
+        class="search-input" />
+        <button type="submit" class="search-button"></button>
+      </div>
+    </form>
+        <div class="gallery"></div>
+            <div class="observe-box"></div>
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
