--- a/src/index.html
+++ b/src/index.html
@@ -1,30 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page title</title>
-    <link rel="stylesheet"
-     href="./sass/index.scss" />
-    <script type="module" src="./js/index.js"></script>
-        <link rel="stylesheet" 
-        href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
-          integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
-          crossorigin="anonymous" referrerpolicy="no-referrer" />
+<html lang="ru">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Search images</title>
+  <link rel="stylesheet" href="./sass/index.scss" />
+  <link rel="stylesheet" href="./css/styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+    integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
     <form class="search-form" id="search-form">
       <div class="search-box">
-        <input type="text" 
-        name="searchQuery" 
-        autocomplete="off" 
-        placeholder="Search images..." 
-        class="search-input" />
-        <button type="submit" class="search-button"></button>
+        <input type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." class="search-input" />
+        <button type="submit" class="search-button">
+          <svg class="icon icon-search">
+            <use href="../src/images/search.svg#search"></use>
+          </svg>
+        </button>
       </div>
     </form>
-        <div class="gallery"></div>
-            <div class="observe-box"></div>
-    <script type="module" src="./index.js"></script>
+    <div class="gallery"></div>
+    <div class="observe-box"></div>
   </body>
 </html>
