--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
       <input type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." class="search-input" />
       <button type="submit" class="search-button">
         <svg class="icon icon-search">
-          <use href="./icons.svg#icon-search"></use>
+          <use href="./icon.svg#icon-search"></use>
         </svg>
       </button>
     </div>
